@@ -44,6 +44,7 @@ import xyz.zedler.patrick.grocy.util.Constants.PREF;
 import xyz.zedler.patrick.grocy.util.DateUtil;
 import xyz.zedler.patrick.grocy.util.NumUtil;
 import xyz.zedler.patrick.grocy.util.PluralUtil;
+import xyz.zedler.patrick.grocy.util.VersionUtil;
 import xyz.zedler.patrick.grocy.util.ViewUtil;
 
 public class FormDataPurchase {
@@ -96,6 +97,7 @@ public class FormDataPurchase {
   private final LiveData<String> storeNameLive;
   private final MutableLiveData<Location> locationLive;
   private final LiveData<String> locationNameLive;
+  private final MutableLiveData<String> noteLive;
   private final PluralUtil pluralUtil;
   private boolean currentProductFlowInterrupted = false;
   private boolean noScanner = false;
@@ -256,6 +258,7 @@ public class FormDataPurchase {
         locationLive,
         location -> location != null ? location.getName() : null
     );
+    noteLive = new MutableLiveData<>();
     pluralUtil = new PluralUtil(application);
     noScanner = args.getStoredPurchaseId() != null;
   }
@@ -633,6 +636,10 @@ public class FormDataPurchase {
     return locationNameLive;
   }
 
+  public MutableLiveData<String> getNoteLive() {
+    return noteLive;
+  }
+
   public boolean isCurrentProductFlowNotInterrupted() {
     return !currentProductFlowInterrupted;
   }
@@ -841,6 +848,9 @@ public class FormDataPurchase {
       if (isFeatureEnabled(Constants.PREF.FEATURE_STOCK_LOCATION_TRACKING) && location != null) {
         json.put("location_id", String.valueOf(location.getId()));
       }
+      if (noteLive.getValue() != null && !noteLive.getValue().isEmpty()) {
+        json.put("note", noteLive.getValue());
+      }
     } catch (JSONException e) {
       if (isDebuggingEnabled()) {
         Log.e(TAG, "getFilledJSONObject: " + e);
@@ -938,6 +948,7 @@ public class FormDataPurchase {
     storeLive.setValue(null);
     showStoreSection.setValue(true);
     locationLive.setValue(null);
+    noteLive.setValue(null);
     new Handler().postDelayed(() -> {
       productNameErrorLive.setValue(null);
       quantityUnitErrorLive.setValue(false);
@@ -965,6 +976,10 @@ public class FormDataPurchase {
         Constants.SETTINGS.SCANNER.EXTERNAL_SCANNER,
         Constants.SETTINGS_DEFAULT.SCANNER.EXTERNAL_SCANNER
     );
+  }
+
+  public boolean showNotesField() {
+    return VersionUtil.isGrocyServerMin330(sharedPrefs);
   }
 
   public boolean isFeatureEnabled(String pref) {
