@@ -80,6 +80,7 @@
     android:id="@+id/note"
     style="@style/Widget.Grocy.TextView.ListItem.Description"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:textStyle="italic"/>
 
 </LinearLayout>
